@@ -72,6 +72,11 @@
                 </exclusion>
             </exclusions>
         </dependency>
+        <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <version>2.10.1</version>
+        </dependency>
         <!-- Add SLF4J and Logback for logging -->
         <dependency>
             <groupId>org.slf4j</groupId>
@@ -115,6 +120,11 @@
             </exclusions>
         </dependency>
         <dependency>
+            <groupId>commons-io</groupId>
+            <artifactId>commons-io</artifactId>
+            <version>2.15.1</version>
+        </dependency>
+        <dependency>
             <groupId>com.kohlschutter.junixsocket</groupId>
             <artifactId>junixsocket-core</artifactId>
             <version>2.8.1</version>
@@ -156,6 +166,18 @@
                             <skip>false</skip>
                         </configuration>
                         <executions>
+                            <execution>
+                                <id>tutorial</id>
+                                <configuration>
+                                    <arguments>
+                                        <argument>-classpath</argument>
+                                        <classpath/>
+                                        <argument>-ea</argument>
+                                        <argument>io.github.jbellis.jvector.example.tutorial.TutorialRunner</argument>
+                                        <argument>${tutorial}</argument>
+                                    </arguments>
+                                </configuration>
+                            </execution>
                             <execution>
                                 <id>sift</id>
                                 <goals>
@@ -222,6 +244,19 @@
                             <skip>false</skip>
                         </configuration>
                         <executions>
+                            <execution>
+                                <id>tutorial</id>
+                                <configuration>
+                                    <arguments>
+                                        <argument>-classpath</argument>
+                                        <classpath/>
+                                        <argument>--add-modules=jdk.incubator.vector</argument>
+                                        <argument>-ea</argument>
+                                        <argument>io.github.jbellis.jvector.example.tutorial.TutorialRunner</argument>
+                                        <argument>${tutorial}</argument>
+                                    </arguments>
+                                </configuration>
+                            </execution>
                             <execution>
                                 <id>sift</id>
                                 <goals>
@@ -338,6 +373,21 @@
                             <skip>false</skip>
                         </configuration>
                         <executions>
+                            <execution>
+                                <id>tutorial</id>
+                                <configuration>
+                                    <arguments>
+                                        <argument>-classpath</argument>
+                                        <classpath/>
+                                        <argument>--enable-native-access=ALL-UNNAMED</argument>
+                                        <argument>--add-modules=jdk.incubator.vector</argument>
+                                        <argument>-ea</argument>
+                                        <argument>-Djvector.experimental.enable_native_vectorization=true</argument>
+                                        <argument>io.github.jbellis.jvector.example.tutorial.TutorialRunner</argument>
+                                        <argument>${tutorial}</argument>
+                                    </arguments>
+                                </configuration>
+                            </execution>
                             <execution>
                                 <id>sift</id>
                                 <goals>
